# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-06-17 Michael Truog   <mjtruog at protonmail dot com>

    * Change CloudI Service API services_status time duration
      strings to omit large 0 durations and to use singular units

2018-06-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add more comments to cloudi_service_queue
    * Change CloudI Service API services_status time duration
      strings to provide days

2018-06-11 Michael Truog   <mjtruog at protonmail dot com>

    * Add the Erlang implementation of the binary_pairs format
      (for RequestInfo/ResponseInfo key/value data)

2018-06-09 Michael Truog   <mjtruog at protonmail dot com>

    * Remove ZeroMQ support from this repository
      (it continues to exist at
       https://github.com/CloudI/cloudi_service_zeromq)
        * If cloudi_service_zeromq was being used for CloudI
          node connections, it is best to switch to using the SSH
          connectivity in cloudi_service_router

2018-06-06 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the accuracy of the time used for the start/end of a
      restart for the data used by the CloudI Service API
      function services_status
        * Now the CloudI Service API services_status function tracks
          restarting downtime as a time period that begins
          immediately before the service termination starts and ends
          immediately after the service initialization is finished

2018-06-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add the remaining changes for JSON support in
      cloudi_service_api_requests

2018-06-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add JSON as a supported format of cloudi_service_api_requests
    * Switch the JSON-RPC support in cloudi_service_api_requests to
      use JSON text for the request/response instead of erlang terms
    * Add the functions cloudi_string:term_to_binary_compact/1 and